examples/test/conf/HTTPRoute/Backend/HealthCheckTransition/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hc-transition-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 31142
      allowedRoutes:
        namespaces:
          from: All
