examples/test/conf/HTTPRoute/Backend/HealthCheckTransition/HTTPRoute_default_hc-transition.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hc-transition-route
  namespace: edgion-default
spec:
  parentRefs:
    - name: hc-transition-gateway
      namespace: edgion-test
  hostnames:
    - "hc-transition.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hc-transition
          port: 30001
