examples/test/conf/HTTPRoute/Backend/HealthCheckTransition/Service_default_hc-transition.yaml
apiVersion: v1
kind: Service
metadata:
  name: hc-transition
  namespace: edgion-default
  annotations:
    edgion.io/health-check: |
      active:
        type: http
        path: /health
        interval: 1s
        timeout: 1s
        healthyThreshold: 1
        unhealthyThreshold: 1
        expectedStatuses:
          - 200
spec:
  ports:
    - port: 30001
      targetPort: 30001
      protocol: TCP
